- added filtergroup and filteritem - template adjusted
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/audio_gallery/trunk@49320 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Resources/Private/Templates/Entry/Index.html
+++ b/Resources/Private/Templates/Entry/Index.html
@@ -1,16 +1,35 @@
 <f:layout name="default" />
 <f:section name="main">
-	<div class="user-gallery">
-	
-		<f:widget.paginate objects="{entries}" as="paginatedEntries" configuration="{itemsPerPage: 12, insertAbove: 1, insertBelow: 1}">
-			<f:for each="{paginatedEntries}" as="entry">
-				<div id="pictureId_{entry.uid}" class="user">
-					<h3 class="skin-color">{entry.title}</h3>
-					<p>{entry.author}</p>
+	<div class="audio-gallery">
+		
+		<div class="filters">
+			<div class="filter-area">
+				<f:form action="index">
+					<f:for each="{filterGroups}" as="filterGroup">
+						<f:form.select name="{filterGroup.name}" options="{filterGroup.filterItem}:{filterGroup.filterItem.name}" />
+					</f:for>
+				</f:form>
+			</div>
+			<div class="paging-area">
+				<f:widget.paginate objects="{entries}" as="paginatedEntries" configuration="{itemsPerPage: 12, insertAbove: 1, insertBelow: 1}">
+			</div>
+		</div>
+		
+		<f:for each="{paginatedEntries}" as="entry">
+			<div class="entry" id="entry_{entry.uid}">
+				<p>{entry.title}</p>
+				<h3 class="skin-color">{entry.author}</h3>
+				<div class="background skin-back">
 					<f:render partial="jwplayer" arguments="{entry:entry}" />
 				</div>
-			</f:for>
-		</f:widget.paginate>
+			</div>
+		</f:for>
+		
+		<div class="filters">
+			<div class="paging-area">
+				</f:widget.paginate>
+			</div>
+		</div>
 		
 	</div>
 </f:section>
