Add Single view
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/audio_gallery/trunk@49342 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Resources/Private/Templates/Entry/Index.html
+++ b/Resources/Private/Templates/Entry/Index.html
@@ -22,22 +22,8 @@
 				<h3 class="skin-color">{entry.author}</h3>
 				<div class="background skin-back">
 					<f:render partial="jwplayer" arguments="{entry:entry}" />
-					
 				</div>
-				<!-- AddThis Button BEGIN -->
-					<!-- TODO ADD url to single View -->
-					<div class="addthis_toolbox addthis_default_style ">
-						<a class="addthis_button_compact" style="padding:0;">
-							<img src="{f:uri.resource(path:'Images/more.gif')}" />
-						</a>
-						<a class="addthis_button_email" style="padding:0;">
-							<img src="{f:uri.resource(path:'Images/mail.gif')}" />
-						</a>
-						<a class="addthis_button_facebook" style="padding:0;">
-							<img src="{f:uri.resource(path:'Images/share.gif')}" />
-						</a>
-					</div>
-					<!-- AddThis Button END -->
+				<f:render partial="Addthis" arguments="{entry:entry}" />
 			</div>
 		</f:for>
 		
