added controlbar bottom for jwplayer
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/audio_gallery/trunk@49443 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Resources/Private/Partials/jwplayer.html
+++ b/Resources/Private/Partials/jwplayer.html
@@ -21,7 +21,9 @@
 	var mute = "{jwplayer_config.mute}";
 	var stretching = "{jwplayer_config.stretching}";
 	var repeat = "{jwplayer_config.repeat}";
+	var controlbar = "{jwplayer_config.controlbar}";
 	var skin = "{jwplayer_config.skin}";
+	
 
 	/* <![CDATA[ */
 	var config = {
@@ -37,6 +39,7 @@
 		autostart:autostart,
 		mute:mute,
 		volume:volume,
+		controlbar:controlbar,
 		skin:skin
 	};
 	
