--- a/Resources/Private/Partials/Addthis.html
+++ b/Resources/Private/Partials/Addthis.html
@@ -1,8 +1,6 @@
 <!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style"  addthis:url="{f:uri.action(action:'show',absolute:1,arguments:{entry:entry})}" addthis:title="{entry.title}">
-	<a class="addthis_button_compact">
-		<img src="{f:uri.resource(path:'Images/more.png')}" />
-	</a>
+	<f:link.action action="download" arguments="{entry : entry}"><img src="{f:uri.resource(path:'Images/more.png')}" /></f:link.action>
 	<a class="addthis_button_email">
 		<img src="{f:uri.resource(path:'Images/mail.png')}" />
 	</a>
