make single view on other page possible added more content to open graph meta tags
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/audio_gallery/trunk@49460 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Resources/Private/Templates/Entry/Show.html
+++ b/Resources/Private/Templates/Entry/Show.html
@@ -5,7 +5,7 @@
 		<p>{entry.title}</p>
 		<h3 class="skin-color">{entry.author}</h3>
 		<div class="background skin-back">
-			<f:render partial="jwplayer" arguments="{entry:entry}" />
+			<f:render partial="jwplayer" arguments="{entry:entry, jwplayer_config:jwplayer_config}" />
 		</div>
 		<f:render partial="Addthis" arguments="{entry:entry}" />
 	</div>
