--- a/Resources/Private/Partials/Addthis.html
+++ b/Resources/Private/Partials/Addthis.html
@@ -1,5 +1,5 @@
 <!-- AddThis Button BEGIN -->
-<div class="addthis_toolbox addthis_default_style"  addthis:url="{f:uri.action(action:'show',absolute:1,arguments:{entry:entry})}" addthis:title="{entry.title}">
+<div class="addthis_toolbox addthis_default_style" addthis:url="{f:uri.action(pageUid: settings.singleView, controller:'Entry',action:'show',absolute:1,arguments:{entry:entry})}" addthis:title="{entry.title}">
 	<f:link.action class="download-link" action="download" arguments="{entry : entry}"><img src="{f:uri.resource(path:'Images/more.png')}" /></f:link.action>
 	<a class="addthis_button_email">
 		<img src="{f:uri.resource(path:'Images/mail.png')}" />
