added possibility to disable the loading of the addThis javascript code
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/audio_gallery/trunk@49530 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Resources/Private/Templates/Entry/Show.html
+++ b/Resources/Private/Templates/Entry/Show.html
@@ -20,9 +20,13 @@
 			
 			<div class="clear"></div>
 		</div>
-		<script type="text/javascript">
-			<addthis:rawValue value="{addthis_config}" />
-		</script>
-		<script type="text/javascript" src="{addthis_jsurl}"></script>
+		<f:if condition="{settings.renderAddThisInclude}">
+			<f:then>
+				<script type="text/javascript">
+					<addthis:rawValue value="{addthis_config}" />
+				</script>
+				<script type="text/javascript" src="{addthis_jsurl}"></script>
+			</f:then>
+		</f:if>
 	</div>
 </f:section>
