--- a/Resources/Private/Templates/Entry/Index.html
+++ b/Resources/Private/Templates/Entry/Index.html
@@ -66,8 +66,13 @@
 		</div>
 		
 	</div>
-	<script type="text/javascript">
-		<addthis:rawValue value="{addthis_config}" />
-	</script>
-	<script type="text/javascript" src="{addthis_jsurl}"></script>
+	
+	<f:if condition="{settings.renderAddThisInclude}">
+		<f:then>
+			<script type="text/javascript">
+				<addthis:rawValue value="{addthis_config}" />
+			</script>
+			<script type="text/javascript" src="{addthis_jsurl}"></script>
+		</f:then>
+	</f:if>
 </f:section>
