added possibility to use different image in detail view
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/audio_gallery/trunk@49600 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Resources/Private/Partials/jwplayer.html
+++ b/Resources/Private/Partials/jwplayer.html
@@ -7,7 +7,7 @@
 <jwplayer:script>
 	
 	var file = "{entry.audioFileSrc}";
-	var image = "{entry.previewImageSrc}";
+	var image = "{image}";
 	var player_id = "player_{entry.uid}";
 	var flashplayer = "{jwplayer_config.flashplayer}";
 	var backcolor = "{jwplayer_config.backcolor}";
