--- a/Resources/Private/Templates/Entry/Show.html
+++ b/Resources/Private/Templates/Entry/Show.html
@@ -6,7 +6,7 @@
 	
 			<div class="video">
 				<div class="background skin-back">
-					<f:render partial="jwplayer" arguments="{entry:entry, jwplayer_config:jwplayer_config}" />
+					<f:render partial="jwplayer" arguments="{entry:entry, jwplayer_config:jwplayer_config, image: entry.singleViewImageSrc}" />
 				</div>
 			</div>
 			
