changed download button
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/audio_gallery/trunk@49700 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Resources/Private/Partials/Addthis.html
+++ b/Resources/Private/Partials/Addthis.html
@@ -10,7 +10,7 @@
 				<img src="{f:uri.resource(path:'Images/download.png')}" />
 			</f:then>
 			<f:else>
-				<img src="{f:uri.resource(path:'Images/more.png')}" />
+				<img src="{f:uri.resource(path:'Images/download-small.png')}" />
 			</f:else>
 		</f:if>	
 	
