--- a/Resources/Private/Templates/Entry/Index.html
+++ b/Resources/Private/Templates/Entry/Index.html
@@ -50,8 +50,8 @@
 		
 		<f:for each="{paginatedEntries}" as="entry">
 			<div class="entry" id="entry_{entry.uid}">
-				<p>{entry.title}</p>
-				<h3 class="skin-color">{entry.author}</h3>
+				<f:if condition="{entry.title}"><p>{entry.title}</p></f:if>
+				<f:if condition="{entry.author}"><h3 class="skin-color">{entry.author}</h3></f:if>
 				<div class="background skin-back">
 					<f:render partial="jwplayer" arguments="{entry:entry, jwplayer_config:jwplayer_config, image: entry.previewImageSrc}" />
 				</div>
