fixed url to audio-file
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/audio_gallery/trunk@49726 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Resources/Private/Partials/jwplayer.html
+++ b/Resources/Private/Partials/jwplayer.html
@@ -5,8 +5,7 @@
 </div>
 
 <jwplayer:script>
-	
-	var file = "{entry.audioFileSrc}";
+	var file = "/{entry.audioFileSrc}";
 	var image = "{image}";
 	var player_id = "player_{entry.uid}";
 	var flashplayer = "{jwplayer_config.flashplayer}";
