fix for no filter view
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/audio_gallery/trunk@49728 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Resources/Private/Templates/Entry/Index.html
+++ b/Resources/Private/Templates/Entry/Index.html
@@ -60,7 +60,7 @@
 		</f:for>
 		
 		<div class="filters">
-			<div class="paging-area">
+			<div class="paging-area paging-area-bottom">
 				</f:widget.paginate>
 			</div>
 		</div>
