fixed download-action (use new page-type to call the download-action)
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/audio_gallery/trunk@49922 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Resources/Private/Partials/Addthis.html
+++ b/Resources/Private/Partials/Addthis.html
@@ -4,7 +4,7 @@
 		<img src="{f:uri.resource(path:'Images/facebook.png')}" />
 	</a>
 	
-	<f:link.action class="download-link" action="download" arguments="{entry : entry}" title="Download">
+	<f:link.action class="download-link" action="download" pageType="120719072011" arguments="{entry : entry}" title="Download">
 		<f:if condition="{largeButton}">
 			<f:then>
 				<img src="{f:uri.resource(path:'Images/download.png')}" />
