delete download-function (call audio-files directly, not through PHP)
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/audio_gallery/trunk@49958 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Resources/Private/Partials/Addthis.html
+++ b/Resources/Private/Partials/Addthis.html
@@ -4,7 +4,7 @@
 		<img src="{f:uri.resource(path:'Images/facebook.png')}" />
 	</a>
 	
-	<f:link.action class="download-link" action="download" pageType="120719072011" arguments="{entry : entry}" title="Download">
+	<a href="{entry.audioFileUrl}">
 		<f:if condition="{largeButton}">
 			<f:then>
 				<img src="{f:uri.resource(path:'Images/download.png')}" />
@@ -13,8 +13,7 @@
 				<img src="{f:uri.resource(path:'Images/download-small.png')}" />
 			</f:else>
 		</f:if>	
-	
-	</f:link.action>
+	</a>
 	<a class="addthis_button_email">
 		<img src="{f:uri.resource(path:'Images/mail.png')}" />
 	</a>
